--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mijuego",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,12 +9,19 @@
   },
   "dependencies": {
     "expo": "~48.0.15",
+    "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.39.0",
+    "eslint-config-universe": "^11.2.0",
+    "prettier": "^2.8.8"
+  },
+  "eslintConfig": {
+    "extens": "universe/native"
   },
   "private": true
 }
